Fix change pwd layout issues in smaller screen, typos & accessibility

--- a/src/components/_pages/profile/ChangePassword/ChangePassword.module.css
+++ b/src/components/_pages/profile/ChangePassword/ChangePassword.module.css
@@ -8,23 +8,26 @@
   font-size: 20px;
 }
 .Content {
-  padding: 20px 100px;
+  padding: 20px 16px;
 }
 .ContentRow {
   display: flex;
+  flex-flow: row wrap;
+  align-items: center;
 }
 .HeaderTitleContent {
   opacity: 0.7;
 }
 .editTitle {
-  width: 30%;
-  text-align: end;
+  flex-basis: 25%;
+  /* width: 30%; */
+  /* text-align: end;  */
 }
 .editContent {
-  margin-left: 20px;
+  vertical-align: middle;
 }
 .ContentError {
-  margin-bottom: 20px;
+  margin-bottom: 8px;
 }
 .messageError {
   font-size: 12px;
